--- a/src/App.css
+++ b/src/App.css
@@ -29,3 +29,15 @@ form {
 .home {
   border-style: dotted;
 }
+
+.card {
+  text-align: center;
+  border: grey solid 1px;
+  padding: 1rem;
+  width: 12rem;
+  height: 15rem;
+  display: inline-grid;
+  margin: 2rem 2rem;
+  box-shadow: 4px 4px rgba(252, 216, 12, 0.938);
+  border-radius: 25px;
+}
