--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,6 @@ form {
   height: 15rem;
   display: inline-grid;
   margin: 2rem 2rem;
-  box-shadow: 4px 4px rgba(252, 216, 12, 0.938);
+  box-shadow: 4px 4px rgba(255, 189, 199);
   border-radius: 25px;
 }
