--- a/src/App.css
+++ b/src/App.css
@@ -32,12 +32,12 @@ form {
 
 .card {
   text-align: center;
-  border: grey solid 1px;
+  border: black solid 1px;
   padding: 1rem;
   width: 12rem;
   height: 15rem;
   display: inline-grid;
   margin: 2rem 2rem;
-  box-shadow: 4px 4px rgba(255, 189, 199);
-  border-radius: 25px;
+  box-shadow: 2px 2px rgba(255, 189, 199);
+  border-radius: 5px;
 }
