--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,6 @@ form {
   height: 15rem;
   display: inline-grid;
   margin: 2rem 2rem;
-  box-shadow: 2px 2px rgba(255, 189, 199);
+  box-shadow: 2px 2px rgb(99, 206, 103);
   border-radius: 5px;
 }
