--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@
 .card {
   text-align: center;
   border: black solid 1px;
+  background-color: antiquewhite;
   padding: 1rem;
   width: 12rem;
   height: 15rem;
