adjusted padding bottom for form

--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,7 @@ a:hover {
 
 form {
   padding-left: 40%;
+  padding-bottom: 3%;
   text-align: left;
   font-size: larger;
   font-family:'Courier New', Courier, monospace;
